--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -8,19 +8,17 @@
   <link href="{%static 'css/styles.css'%}"rel="stylesheet" />
 </head>
 <body>
-<div class="vid-container">
-  <video id="Video1" class="bgvid back" autoplay="true" muted="muted" preload="auto" loop>
-      <source src="/vids/Sunset-on-the-seashore-1428970.mp4" type="video/mp4">
-  </video>
-  <div class="inner-container">
-      
-			{% block login_content %}
-			{% endblock %}
+  <div class="whole">
+    <div class="inner-container">
+        
+        {% block login_content %}
+        {% endblock %}
 
-			{% block register_content %}
-			{% endblock %}
+        {% block register_content %}
+        {% endblock %}
 
-      
+        
+    </div>
   </div>
 </div>
 </body>
