--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,19 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Inter:300);
-body{
-  padding:0;
-  margin:0;
-  font-family: 'Inter';
+.whole{
+  background-color: aqua;
 }
-.vid-container{
-  position:relative;
-  height:100vh;
-  overflow:hidden;
-}
-.bgvid.back {
-  position: fixed; right: 0; bottom: 0;
-  min-width: 100%; min-height: 100%;
-  width: auto; height: auto; z-index: -100;
-}
+
 .inner {
   position: absolute;
 }
